gameservice/deployment/gameserviceservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: gameservice
  namespace: gameservices
spec:
  selector:
    app: gameservice
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
    - protocol: TCP
      port: 443
      name: ssl
      targetPort: 443
